--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -14,6 +14,14 @@
 # limitations under the License.
 #
 
+{{- if (eq $.Values.distStorage.type "local") }}
+  {{- if eq $.Values.imageTag "latest" }}
+  {{- fail "\n\n** ERROR: The 'local' distStorage type is no longer supported in Dremio 21.0.0 or later. Please configure another distStorage provider to deploy Dremio. (Note: 'latest' is presumed to be 21.0.0+.) **\n" -}}
+  {{- else if ge ((semver $.Values.imageTag).Major) 21 }}
+  {{- fail "\n\n** ERROR: The 'local' distStorage type is no longer supported in Dremio 21.0.0 or later. Please configure another distStorage provider to deploy Dremio. **\n" -}}
+  {{- end }}
+{{- end }}
+
 paths: {
   # Local path for dremio to store data.
   local: ${DREMIO_HOME}"/data"
@@ -22,7 +30,8 @@ paths: {
   {{- if ne $.Values.distStorage.type "local" }}
   results: "pdfs://"${paths.local}"/results"
   {{- if eq $.Values.distStorage.type "aws" }}
-  dist: "dremioS3:///{{ required "AWS bucket name required" $.Values.distStorage.aws.bucketName }}{{ required "AWS bucket path required" $.Values.distStorage.aws.path }}"
+  # dist: "dremioS3:///{{ required "AWS bucket name required" $.Values.distStorage.aws.bucketName }}{{ required "AWS bucket path required" $.Values.distStorage.aws.path }}"
+  dist: "dremioS3:///dremio/data"
   {{- else if eq $.Values.distStorage.type "azure" }}
   dist: "dremioAdl://{{ required "Azure Datalake store name required" $.Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Azure Datalake path required" $.Values.distStorage.azure.path }}"
   {{- else if eq $.Values.distStorage.type "azureStorage" }}
