--- a/charts/dremio_v2/config/dremio.conf
+++ b/charts/dremio_v2/config/dremio.conf
@@ -30,9 +30,9 @@ paths: {
   {{- if ne $.Values.distStorage.type "local" }}
   results: "pdfs://"${paths.local}"/results"
   {{- if eq $.Values.distStorage.type "aws" }}
-  # dist: "dremioS3:///{{ required "AWS bucket name required" $.Values.distStorage.aws.bucketName }}{{ required "AWS bucket path required" $.Values.distStorage.aws.path }}"
-  dist: "dremioS3:///dremio/data"
-  {{- else if eq $.Values.distStorage.type "azure" }}
+  dist: "dremioS3:///{{ required "AWS bucket name required" $.Values.distStorage.aws.bucketName }}{{ required "AWS bucket path required" $.Values.distStorage.aws.path }}"
+#  dist: "dremioS3:///dremio-ai/data"
+ {{- else if eq $.Values.distStorage.type "azure" }}
   dist: "dremioAdl://{{ required "Azure Datalake store name required" $.Values.distStorage.azure.datalakeStoreName }}.azuredatalakestore.net{{ required "Azure Datalake path required" $.Values.distStorage.azure.path }}"
   {{- else if eq $.Values.distStorage.type "azureStorage" }}
   dist: "dremioAzureStorage://:///{{ required "Azure Storage filesystem required" $.Values.distStorage.azureStorage.filesystem }}{{ required "Azure Storage path required" $.Values.distStorage.azureStorage.path }}"
